--- a/lcbo-server/pom.xml
+++ b/lcbo-server/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>jersey-hk2</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
@@ -76,9 +81,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.kjchiu</groupId>
+			<groupId>com.kjchiu.lcbodemo</groupId>
 			<artifactId>lcbo-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
