--- a/lcbo-server/pom.xml
+++ b/lcbo-server/pom.xml
@@ -81,6 +81,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.kjchiu.lcbodemo</groupId>
 			<artifactId>lcbo-api</artifactId>
 			<version>${project.version}</version>
