--- a/lcbo-client/package.json
+++ b/lcbo-client/package.json
@@ -13,9 +13,13 @@
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
