--- a/lcbo-client/package.json
+++ b/lcbo-client/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "base64-js": "^1.2.1",
     "bootstrap": "^3.3.7",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
